version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/RCommand.rst.txt
.. vale off



:class:`RCommand`
=================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.RCommand

   Bases: :py:obj:`object`


   
   Represents a R command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: RCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Nset`
            - Gets the set number.
          * - :py:attr:`~Stloc`
            - Gets the starting location.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Nset
   :type: Optional[int]


   
   Gets the set number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Stloc
   :type: Optional[int]


   
   Gets the starting location.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on